[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] } # http
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128" # json
mysql = "25.0.1"
chrono = "0.4.38"
